--- a/scss/sheets/_sheets.scss
+++ b/scss/sheets/_sheets.scss
@@ -41,203 +41,201 @@
 			width: 100%;
 			top: -10px;
 			left: 0px;
+
+			> section {
+				border-top: 2px solid var(--blades-white);
+				border-bottom: none !important;
+			}
+
+			section {
+				z-index: zLevel();
+
+				&.sheet-top {
+					display: grid;
+					grid-auto-columns: 1fr;
+					place-items: center stretch;
+					pointer-events: none;
+
+					input { pointer-events: auto }
+
+					.comp-control.comp-button.comp-delete { display: none }
+
+					img[data-edit] { height: 75px }
+
+					.sheet-title {
+						--sheet-title-font-size: #{toRem(32px)};
+						--sheet-title-height-mult: 1.5;
+
+						grid-area: title;
+						overflow: visible;
+						font-family: var(--font-emphasis);
+						color: var(--blades-white-bright);
+						font-size: var(--sheet-title-font-size);
+						font-variant: small-caps;
+						height: calc(var(--sheet-title-height-mult) * var(--sheet-title-font-size));
+						margin-top: calc(-1 * var(--content-padding));
+						position: relative;
+						// top: calc(-1 * (var(--sheet-title-font-size) / 6));
+					}
+
+					.sheet-subtitle {
+						--sheet-subtitle-font-size: #{toRem(24px)};
+						--sheet-subtitle-height-mult: 1.8;
+
+						grid-area: subtitle;
+						overflow: visible;
+						font-family: var(--font-decorative);
+						font-size: var(--sheet-subtitle-font-size);
+						height: calc(var(--sheet-subtitle-height-mult) * var(--sheet-subtitle-font-size));
+						margin-top: calc(-0.75 * var(--sheet-subtitle-font-size));
+					}
+				}
+
+				&.sheet-mid-bar {
+					display: flex;
+					justify-content: space-between;
+					align-items: stretch;
+					flex-wrap: nowrap;
+					border-top: 2px solid var(--blades-white);
+					border-bottom: 2px solid var(--blades-white);
+					background: linear-gradient(to bottom, var(--blades-white), transparent 25%);
+					background: transparent;
+					position: relative;
+					width: calc(100% + (2 * var(--content-padding)));
+					height: toRem(60px);
+					left: calc(-1 * var(--content-padding));
+					padding: 0 var(--content-padding);
+				}
+
+				&.nav-group {
+					height: 100%;
+					justify-content: flex-start;
+					border: 0;
+					overflow: hidden;
+
+					> * { width: 100% }
+
+					> .nav-tabs.flex-horizontal {
+						background-color: var(--blades-grey-bright);
+						border: 2px solid var(--blades-white);
+						padding: 0 toRem(10px);
+						width: 100%;
+						height: toRem(26px);
+						min-height: toRem(26px);
+						overflow: visible;
+						align-items: center;
+						justify-content: space-around;
+
+						.tab-selector {
+							color: var(--blades-black);
+							padding: 0 toRem(5px);
+							font-family: Kirsty;
+							line-height: toRem(20px);
+							transition: 0.25s;
+							transform-origin: center center;
+							white-space: nowrap;
+
+							&.active {
+								background: linear-gradient(to right,
+										transparent,
+										var(--blades-white-bright) 25%,
+										var(--blades-white-bright) 75%,
+										transparent);
+								transform: scale(1.2);
+								position: relative;
+								z-index: zLevel();
+							}
+
+							&:hover:not(.active) {
+								color: var(--blades-black-dark);
+								transform: scale(1.2);
+								background: linear-gradient(to right,
+										transparent,
+										var(--blades-white) 10%,
+										var(--blades-white-bright) 50%,
+										var(--blades-white) 90%,
+										transparent);
+							}
+						}
+					}
+					.tab[data-tab] {
+						display: none;
+						width: 100%;
+						overflow-y: auto;
+						overflow-x: hidden;
+						padding: 0 var(--content-padding);
+						flex-grow: 1;
+
+						&.active {
+							display: block;
+						}
+					}
+				}
+			}
 		}
 	}
-}
 
-.window-content section {
+	.tab-label {
+		display: block;
+		background: var(--blades-grey);
+		// padding: toRem(3px) 0;
+		position: relative;
+		// border: 2px solid var(--blades-black);
+		// border-top: none;
+		height: toRem(24px);
+		width: calc(100% + var(--content-padding));
+		left: calc(-1 * var(--content-padding));
+		margin-bottom: toRem(5px);
 
-	z-index: zLevel();
+		display: flex;
+		justify-content: space-between;
+		justify-content: flex-start;
+		align-items: center;
 
-	&.sheet-top {
-		display: grid;
-		grid-auto-columns: 1fr;
-		place-items: center stretch;
+		.tab-title {
+			font-family: var(--font-emphasis);
+			font-size: toRem(14px);
+			color: var(--blades-white-bright);
+			text-transform: uppercase;
+			margin-left: toRem(5px);
+
+		}
+	}
+
+
+	// .editor-tab {
+	// 	position: relative;
+	// 	width: calc(100% + 2 * var(--content-padding));
+	// 	left: calc(-1 * var(--content-padding));
+	// }
+
+	// .effects-list { width: 100% }
+
+	.clock-container {
+		position: relative;
 		pointer-events: none;
 
-		input { pointer-events: auto }
+		@import "../components/clocks";
 
-		.comp-control.comp-button.comp-delete { display: none }
+		.clock {
+			top: 50%;
+			left: 50%;
 
-		img[data-edit] { height: 75px }
+			* { position: absolute }
 
-		.sheet-title {
-			--sheet-title-font-size: #{toRem(32px)};
-			--sheet-title-height-mult: 1.5;
+			.clock-interior {
+				circle { fill: var(--blades-black-fade-strong) }
 
-			grid-area: title;
-			overflow: visible;
-			font-family: var(--font-emphasis);
-			color: var(--blades-white-bright);
-			font-size: var(--sheet-title-font-size);
-			font-variant: small-caps;
-			height: calc(var(--sheet-title-height-mult) * var(--sheet-title-font-size));
-			margin-top: calc(-1 * var(--content-padding));
-			position: relative;
-			// top: calc(-1 * (var(--sheet-title-font-size) / 6));
-		}
-
-		.sheet-subtitle {
-			--sheet-subtitle-font-size: #{toRem(24px)};
-			--sheet-subtitle-height-mult: 1.8;
-
-			grid-area: subtitle;
-			overflow: visible;
-			font-family: var(--font-decorative);
-			font-size: var(--sheet-subtitle-font-size);
-			height: calc(var(--sheet-subtitle-height-mult) * var(--sheet-subtitle-font-size));
-			margin-top: calc(-0.75 * var(--sheet-subtitle-font-size));
-		}
-	}
-
-	&.sheet-mid-bar {
-		display: flex;
-		justify-content: stretch;
-		align-items: stretch;
-		flex-wrap: nowrap;
-		border-top: 2px solid var(--blades-white);
-		border-bottom: 2px solid var(--blades-white);
-		background: linear-gradient(to bottom, var(--blades-white), transparent 25%);
-		background: transparent;
-		position: relative;
-		width: calc(100% + (2 * var(--content-padding)));
-		height: toRem(60px);
-		left: calc(-1 * var(--content-padding));
-		padding: 0 var(--content-padding);
-	}
-
-
-}
-
-
-.window-content .effects-list {
-	width: 100%;
-}
-
-.window-content .tab-label {
-	display: block;
-	background: var(--blades-grey);
-	// padding: toRem(3px) 0;
-	position: relative;
-	// border: 2px solid var(--blades-black);
-	// border-top: none;
-	height: toRem(24px);
-	width: calc(100% + var(--content-padding));
-	left: calc(-1 * var(--content-padding));
-	margin-bottom: toRem(5px);
-
-	display: flex;
-	justify-content: space-between;
-	justify-content: flex-start;
-	align-items: center;
-
-	.tab-title {
-		font-family: var(--font-emphasis);
-		font-size: toRem(14px);
-		color: var(--blades-white-bright);
-		text-transform: uppercase;
-		margin-left: toRem(5px);
-
-	}
-}
-
-.window-content .nav-group {
-	height: 100%;
-	justify-content: flex-start;
-	overflow: hidden;
-
-	> * { width: 100% }
-
-	> .nav-tabs.flex-horizontal {
-		background-color: var(--blades-grey-bright);
-		border: 2px solid var(--blades-white);
-		padding: 0 toRem(10px);
-		width: 100%;
-		height: toRem(26px);
-		min-height: toRem(26px);
-		overflow: visible;
-		align-items: center;
-		justify-content: space-around;
-
-		.tab-selector {
-			color: var(--blades-black);
-			padding: 0 toRem(5px);
-			font-family: Kirsty;
-			line-height: toRem(20px);
-			transition: 0.25s;
-			transform-origin: center center;
-			white-space: nowrap;
-
-			&.active {
-				background: linear-gradient(to right,
-						transparent,
-						var(--blades-white-bright) 25%,
-						var(--blades-white-bright) 75%,
-						transparent);
-				transform: scale(1.2);
-				position: relative;
-				z-index: zLevel();
+				.clock-interior-img {
+					pointer-events: auto;
+				}
 			}
 
-			&:hover:not(.active) {
-				color: var(--blades-black-dark);
-				transform: scale(1.2);
-				background: linear-gradient(to right,
-						transparent,
-						var(--blades-white) 10%,
-						var(--blades-white-bright) 50%,
-						var(--blades-white) 90%,
-						transparent);
+			.clock-frame {
+				stroke-width: 15px;
+				stroke: var(--blades-black-dark-fade);
+				overflow: visible;
 			}
 		}
 	}
-  .tab[data-tab] {
-    display: none;
-		width: 100%;
-		overflow-y: auto;
-		overflow-x: hidden;
-		padding: 0 var(--content-padding);
-		flex-grow: 1;
-
-    &.active {
-      display: block;
-    }
-  }
-}
-
-.window-content .clock-container {
-	position: relative;
-	pointer-events: none;
-
-	@import "../components/clocks";
-
-	.clock {
-		top: 50%;
-		left: 50%;
-
-		* { position: absolute }
-
-		.clock-interior {
-			circle { fill: var(--blades-black-fade-strong) }
-
-			.clock-interior-img {
-				pointer-events: auto;
-			}
-		}
-
-		.clock-frame {
-			stroke-width: 15px;
-			stroke: var(--blades-black-dark-fade);
-			overflow: visible;
-		}
-	}
-}
-
-
-.window-content .turf-list { @import "../components/turf-block" }
-
-.window-content .editor-tab {
-	position: relative;
-	width: calc(100% + 2 * var(--content-padding));
-	left: calc(-1 * var(--content-padding));
 }
