--- a/templates/crew-sheet.hbs
+++ b/templates/crew-sheet.hbs
@@ -14,218 +14,222 @@
 		}}
 	{{/if}}
 
-	{{!-- Header --}}
-	<section class="sheet-top">
+	{{!-- Sheet Container --}}
+	<div class="sheet-root">
+		{{!-- Header --}}
+		<section class="sheet-top">
 
-		<input class="sheet-title shadowed" type="text" name="name" value="{{actor.name}}">
+			<input class="sheet-title shadowed" type="text" name="name" value="{{actor.name}}">
 
-		{{> "systems/eunos-blades/templates/components/comp.hbs" items.playbook
-			addButton=true
-			cat="crew_playbook"
-			id=items.playbook._id
-			class="comp-playbook comp-vertical"
-			label="Playbook"
-		}}
+			{{> "systems/eunos-blades/templates/components/comp.hbs" items.playbook
+				addButton=true
+				cat="crew_playbook"
+				id=items.playbook._id
+				class="comp-playbook comp-vertical"
+				label="Playbook"
+			}}
 
-		{{> "systems/eunos-blades/templates/components/comp.hbs" items.reputation
-			addButton=true
-			label="Reputation"
-			cat="crew_reputation"
-			id=items.reputation._id
-			class="comp-reputation comp-vertical no-img"
-		}}
+			{{> "systems/eunos-blades/templates/components/comp.hbs" items.reputation
+				addButton=true
+				label="Reputation"
+				cat="crew_reputation"
+				id=items.reputation._id
+				class="comp-reputation comp-vertical no-img"
+			}}
 
-		{{> "systems/eunos-blades/templates/components/comp.hbs" items.preferredOp
-			addButton=true
-			label="Preferred Op"
-			cat="preferred_op"
-			id=items.preferredOp._id
-			class="comp-preferred-op comp-vertical"
-		}}
+			{{> "systems/eunos-blades/templates/components/comp.hbs" items.preferredOp
+				addButton=true
+				label="Preferred Op"
+				cat="preferred_op"
+				id=items.preferredOp._id
+				class="comp-preferred-op comp-vertical"
+			}}
 
-		{{> "systems/eunos-blades/templates/components/comp.hbs" tierData
-			label="Tier"
-			class="comp-tier comp-vertical" }}
+			{{> "systems/eunos-blades/templates/components/comp.hbs" tierData
+				label="Tier"
+				class="comp-tier comp-vertical" }}
 
-		{{> "systems/eunos-blades/templates/components/comp.hbs" coinsData
-			label="Coins"
-			class="comp-coins comp-vertical" }}
+			{{> "systems/eunos-blades/templates/components/comp.hbs" coinsData
+				label="Coins"
+				class="comp-coins comp-vertical" }}
 
-		<div class="members comp-horizontal comp">
-			<label class="comp filled-label" data-comp-cat="crew-pc">
-				<a class="comp-control comp-button comp-add">
-					<i class="fas fa-plus-square"></i>
-				</a>
-				<span>Members</span>
-			</label>
-			<div class="portrait-container flex-horizontal">
-				{{#each actors.members as |actor|}}
-				{{> "systems/eunos-blades/templates/components/comp.hbs" actor
-					cat="crew-pc"
-					id=actor._id
-					class="comp-vertical portrait-block"
+			<div class="members comp-horizontal comp">
+				<label class="comp filled-label" data-comp-cat="crew-pc">
+					<a class="comp-control comp-button comp-add">
+						<i class="fas fa-plus-square"></i>
+					</a>
+					<span>Members</span>
+				</label>
+				<div class="portrait-container flex-horizontal">
+					{{#each actors.members as |actor|}}
+					{{> "systems/eunos-blades/templates/components/comp.hbs" actor
+						cat="crew-pc"
+						id=actor._id
+						class="comp-vertical portrait-block"
+						remButton=true
+					}}
+					{{/each}}
+				</div>
+			</div>
+		</section>
+
+		{{!-- Rep/Turf, Heat, Wanted --}}
+		<section class="sheet-mid-bar flex-horizontal full-width">
+
+			{{> "systems/eunos-blades/templates/components/comp.hbs"
+				class="comp-rep comp-horizontal comp-teeth"
+				label=repData.name
+				labelClass="filled-label"
+				dotlines=repData.dotlines
+			}}
+
+			{{> "systems/eunos-blades/templates/components/comp.hbs" holdData
+				class="comp-hold comp-vertical"
+				label=holdData.name
+				name=holdData.displayVal
+				labelClass="filled-label short-label"
+			}}
+
+			{{> "systems/eunos-blades/templates/components/comp.hbs"
+				class="comp-rep comp-horizontal comp-teeth"
+				label=heatData.name
+				labelClass="filled-label"
+				dotline=heatData.dotline
+			}}
+
+			{{> "systems/eunos-blades/templates/components/comp.hbs"
+				class="comp-trauma comp-vertical comp-teeth"
+				label=wantedData.name
+				labelClass="filled-label"
+				dotline=wantedData.dotline
+			}}
+
+		</section>
+
+
+		{{!-- Navigable Tabs --}}
+		<section class="tab-content nav-group flex-vertical">
+			{{!-- Nav menu --}}
+			<nav class="nav-tabs flex-horizontal">
+				<a class="tab-selector" data-tab="claims">Claims</a>
+				<a class="tab-selector" data-tab="upgrades">Upgrades</a>
+				<a class="tab-selector" data-tab="abilities">Abilities</a>
+				<a class="tab-selector" data-tab="cohorts">Cohorts</a>
+				<a class="tab-selector" data-tab="player-notes">Notes</a>
+				{{#if isGM}}
+					<a class="tab-selector" data-tab="gm-notes">GM Notes</a>
+					<a class="tab-selector" data-tab="all-items">All Items</a>
+				{{/if}}
+			</nav>
+
+			{{!-- Claims --}}
+			<div class="tab claims" data-tab="claims">
+				{{#if items.playbook}}
+				{{> "systems/eunos-blades/templates/parts/turf-list.hbs"
+					actor=actor
+					turfs_data=items.playbook.system.turfs
+					can_edit=false
+				}}
+				{{/if}}
+			</div>
+
+			{{!-- Crew Upgrades --}}
+			<div class="tab upgrades flex-vertical" data-tab="upgrades">
+				<label class="comp tab-label" data-comp-cat="crew_upgrade">
+					<a class="comp-control comp-button comp-add">
+						<i class="fas fa-plus-square"></i>
+					</a>
+					<span class="tab-title">Crew Upgrades</span>
+				</label>
+
+				{{#each items.upgrades}}
+				{{> "systems/eunos-blades/templates/components/comp.hbs" this
+					class="comp-desc-trait comp-horizontal full-width"
 					remButton=true
 				}}
 				{{/each}}
 			</div>
-		</div>
-	</section>
 
-	{{!-- Rep/Turf, Heat, Wanted --}}
-	<section class="sheet-mid-bar flex-horizontal full-width">
-
-		{{> "systems/eunos-blades/templates/components/comp.hbs"
-			class="comp-rep comp-horizontal comp-teeth"
-			label=repData.name
-			labelClass="filled-label"
-			dotlines=repData.dotlines
-		}}
-
-		{{> "systems/eunos-blades/templates/components/comp.hbs" holdData
-			class="comp-hold comp-vertical"
-			label=(concat (case "upper" holdData.value) " Hold")
-			labelClass=(concat "filled-label" " " holdData.value "-hold")
-		}}
-
-		{{> "systems/eunos-blades/templates/components/comp.hbs"
-			class="comp-rep comp-horizontal comp-teeth"
-			label=heatData.name
-			labelClass="filled-label"
-			dotline=heatData.dotline
-		}}
-
-		{{> "systems/eunos-blades/templates/components/comp.hbs"
-			class="comp-trauma comp-vertical comp-teeth"
-			label=wantedData.name
-			labelClass="filled-label"
-			dotline=wantedData.dotline
-		}}
-
-	</section>
-
-
-	{{!-- Navigable Tabs --}}
-	<section class="tab-content nav-group flex-vertical">
-		{{!-- Nav menu --}}
-		<nav class="nav-tabs flex-horizontal">
-			<a class="tab-selector" data-tab="claims">Claims</a>
-			<a class="tab-selector" data-tab="upgrades">Upgrades</a>
-			<a class="tab-selector" data-tab="abilities">Abilities</a>
-			<a class="tab-selector" data-tab="cohorts">Cohorts</a>
-			<a class="tab-selector" data-tab="player-notes">Notes</a>
-			{{#if isGM}}
-				<a class="tab-selector" data-tab="gm-notes">GM Notes</a>
-				<a class="tab-selector" data-tab="all-items">All Items</a>
-			{{/if}}
-		</nav>
-
-		{{!-- Claims --}}
-    <div class="tab claims" data-tab="claims">
-      {{#if items.playbook}}
-      {{> "systems/eunos-blades/templates/parts/turf-list.hbs"
-				actor=actor
-				turfs_data=items.playbook.system.turfs
-				can_edit=false
-			}}
-      {{/if}}
-    </div>
-
-		{{!-- Crew Upgrades --}}
-		<div class="tab upgrades flex-vertical" data-tab="upgrades">
-			<label class="comp tab-label" data-comp-cat="crew_upgrade">
-				<a class="comp-control comp-button comp-add">
-					<i class="fas fa-plus-square"></i>
-				</a>
-				<span class="tab-title">Crew Upgrades</span>
-			</label>
-
-			{{#each items.upgrades}}
-			{{> "systems/eunos-blades/templates/components/comp.hbs" this
-				class="comp-desc-trait comp-horizontal full-width"
-				remButton=true
-			}}
-			{{/each}}
-		</div>
-
-		{{!-- Crew Abilities --}}
-		<div class="tab abilities flex-vertical" data-tab="abilities">
-			<label class="comp tab-label" data-comp-cat="crew_ability">
-				<a class="comp-control comp-button comp-add">
-					<i class="fas fa-plus-square"></i>
-				</a>
-				<span class="tab-title">Crew Abilities</span>
-			</label>
-
-			{{#each items.abilities}}
-			{{> "systems/eunos-blades/templates/components/comp.hbs" this
-				class="comp-desc-trait comp-horizontal full-width"
-				remButton=true
-			}}
-			{{/each}}
-		</div>
-
-    {{!-- Cohorts --}}
-		<div class="tab cohorts flex-vertical" data-tab="cohorts">
-			<label class="comp tab-label" data-comp-cat="cohort">
-				<a class="comp-control comp-button comp-add">
-					<i class="fas fa-plus-square"></i>
-				</a>
-				<span class="tab-title">Cohorts</span>
-			</label>
-
-			{{#each items.cohorts}}
-				{{> "systems/eunos-blades/templates/parts/cohort-block.hbs" }}
-			{{/each}}
-		</div>
-
-		{{!-- Description & Notes Tab --}}
-		<div class="tab player-notes flex-vertical" data-tab="player-notes">
-			<label class="tab-label">
-				<span class="tab-title">Description</span>
-			</label>
-			{{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
-
-			<label class="tab-label">
-				<span class="tab-title">{{localize "BITD.Notes"}}</span>
-			</label>
-			{{editor content=data.notes target="data.notes" button=true owner=owner editable=editable}}
-		</div>
-
-		{{!-- GM-ONLY TABS --}}
-		{{#if isGM}}
-
-			{{!-- GM Notes Tab --}}
-			<div class="tab gm-notes flex-vertical" data-tab="gm-notes">
-				<label class="tab-label">
-					<span class="tab-title">GM Notes</span>
-				</label>
-				{{editor content=data.gm_notes target="data.gm_notes" button=true owner=owner editable=editable}}
-			</div>
-
-			{{!-- Active Effects Tab --}}
-			<div class="tab effects flex-vertical" data-tab="effects">
-				<label class="tab-label">
-					<span class="tab-title">{{localize "BITD.Effects"}}</span>
-				</label>
-				{{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}
-			</div>
-
-			{{!-- Full Item List Tab --}}
-			<div class="tab all-items flex-vertical" data-tab="all-items">
-				<label class="comp tab-label">
-					<span class="tab-title">{{localize "BITD.AllItems"}}</span>
+			{{!-- Crew Abilities --}}
+			<div class="tab abilities flex-vertical" data-tab="abilities">
+				<label class="comp tab-label" data-comp-cat="crew_ability">
+					<a class="comp-control comp-button comp-add">
+						<i class="fas fa-plus-square"></i>
+					</a>
+					<span class="tab-title">Crew Abilities</span>
 				</label>
 
-				{{#each actor.items as |item id|}}
-				{{> "systems/eunos-blades/templates/components/comp.hbs" item
-					id=id
+				{{#each items.abilities}}
+				{{> "systems/eunos-blades/templates/components/comp.hbs" this
 					class="comp-desc-trait comp-horizontal full-width"
-					remFullButton=true
+					remButton=true
 				}}
 				{{/each}}
 			</div>
 
-		{{/if}}
+			{{!-- Cohorts --}}
+			<div class="tab cohorts flex-vertical" data-tab="cohorts">
+				<label class="comp tab-label" data-comp-cat="cohort">
+					<a class="comp-control comp-button comp-add">
+						<i class="fas fa-plus-square"></i>
+					</a>
+					<span class="tab-title">Cohorts</span>
+				</label>
 
-	</section>
+				{{#each items.cohorts}}
+					{{> "systems/eunos-blades/templates/parts/cohort-block.hbs" }}
+				{{/each}}
+			</div>
+
+			{{!-- Description & Notes Tab --}}
+			<div class="tab player-notes flex-vertical" data-tab="player-notes">
+				<label class="tab-label">
+					<span class="tab-title">Description</span>
+				</label>
+				{{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+
+				<label class="tab-label">
+					<span class="tab-title">{{localize "BITD.Notes"}}</span>
+				</label>
+				{{editor content=data.notes target="data.notes" button=true owner=owner editable=editable}}
+			</div>
+
+			{{!-- GM-ONLY TABS --}}
+			{{#if isGM}}
+
+				{{!-- GM Notes Tab --}}
+				<div class="tab gm-notes flex-vertical" data-tab="gm-notes">
+					<label class="tab-label">
+						<span class="tab-title">GM Notes</span>
+					</label>
+					{{editor content=data.gm_notes target="data.gm_notes" button=true owner=owner editable=editable}}
+				</div>
+
+				{{!-- Active Effects Tab --}}
+				<div class="tab effects flex-vertical" data-tab="effects">
+					<label class="tab-label">
+						<span class="tab-title">{{localize "BITD.Effects"}}</span>
+					</label>
+					{{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}
+				</div>
+
+				{{!-- Full Item List Tab --}}
+				<div class="tab all-items flex-vertical" data-tab="all-items">
+					<label class="comp tab-label">
+						<span class="tab-title">{{localize "BITD.AllItems"}}</span>
+					</label>
+
+					{{#each actor.items as |item id|}}
+					{{> "systems/eunos-blades/templates/components/comp.hbs" item
+						id=id
+						class="comp-desc-trait comp-horizontal full-width"
+						remFullButton=true
+					}}
+					{{/each}}
+				</div>
+
+			{{/if}}
+
+		</section>
+	</div>
 </form>
