--- a/templates/components/portrait.hbs
+++ b/templates/components/portrait.hbs
@@ -1,4 +1,4 @@
-<div class="comp comp-vertical portrait-block" data-comp-cat="{{cat}}" {{~#if id}} data-comp-id="{{id}}"{{/if}}>
+<div class="comp comp-vertical portrait-block" data-comp-cat="{{cat}}" data-comp-type="{{docType}}" {{~#if id}} data-comp-id="{{id}}"{{/if}}>
 
   {{~#if label}}
     {{~#if id}}
