--- a/templates/items/crew_playbook-sheet.hbs
+++ b/templates/items/crew_playbook-sheet.hbs
@@ -4,6 +4,8 @@
 		<input class="comp-title sheet-title shadowed" type="text" name="name" value="{{item.name}}" placeholder="{{localize 'BITD.Name'}}" />
 	</section>
 
+
+		<input type="text" class="tag-entry" />
   <section class="item-main flex-vertical">
 		<textarea class="crew-type-description" name="data.description" placeholder="(Description)" {{~#unless editable}} readonly{{/unless}}>{{data.description}}</textarea>
     <label class="label-stripe">{{localize "BITD.ExpClues"}}</label>
