--- a/templates/items/crew_upgrade-sheet.hbs
+++ b/templates/items/crew_upgrade-sheet.hbs
@@ -4,6 +4,8 @@
 		<input class="comp-title sheet-title shadowed" type="text" name="name" value="{{item.name}}" placeholder="{{localize 'BITD.Name'}}" />
 	</section>
 
+
+		<input type="text" class="tag-entry" />
   {{!-- Sheet Body --}}
   <section class="item-main flex-vertical">
 		{{#if isEmbeddedItem}}
