--- a/templates/items/vice-sheet.hbs
+++ b/templates/items/vice-sheet.hbs
@@ -1,10 +1,13 @@
 <form class="{{cssClass}} item-sheet" autocomplete="off">
 
+	<div class="sheet-root">
 	<section class="sheet-top">
 		<img class="sheet-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
 		<input class="comp-title sheet-title shadowed" type="text" name="name" value="{{item.name}}" placeholder="{{localize 'BITD.Name'}}" />
 	</section>
 
+
+		<input type="text" class="tag-entry" />
 	<section class="item-main flex-vertical">
 		{{#if isEmbeddedItem}}
 		<label class="tab-label">
@@ -32,4 +35,5 @@
 			{{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}
 		{{/if}}
 	</section>
+	</div>
 </form>
