--- a/scss/sheets/_sheets.scss
+++ b/scss/sheets/_sheets.scss
@@ -101,55 +101,55 @@
 				}
 
 				&.nav-group {
-					border: 0;
-					overflow: hidden;
+					// border: 0;
+					// overflow: hidden;
 
 					> * { width: 100% }
 
-					> .nav-tabs.flex-horizontal {
-						background-color: var(--blades-grey-bright);
-						border: 2px solid var(--blades-white);
-						padding: 0 toRem(10px);
-						overflow: visible;
-						align-items: center;
-						justify-content: space-around;
+					// > .nav-tabs.flex-horizontal {
+					// 	background-color: var(--blades-grey-bright);
+					// 	border: 2px solid var(--blades-white);
+					// 	padding: 0 toRem(10px);
+					// 	overflow: visible;
+					// 	align-items: center;
+					// 	justify-content: space-around;
 
-						.tab-selector {
-							color: var(--blades-black);
-							padding: 0 toRem(5px);
-							font-family: Kirsty;
-							line-height: toRem(20px);
-							transition: 0.25s;
-							white-space: nowrap;
+					// 	.tab-selector {
+					// 		color: var(--blades-black);
+					// 		padding: 0 toRem(5px);
+					// 		font-family: Kirsty;
+					// 		line-height: toRem(20px);
+					// 		transition: 0.25s;
+					// 		white-space: nowrap;
 
-							&.active {
-								background: linear-gradient(to right,
-										transparent,
-										var(--blades-white-bright) 25%,
-										var(--blades-white-bright) 75%,
-										transparent);
-								transform: scale(1.2);
-							}
+					// 		&.active {
+					// 			background: linear-gradient(to right,
+					// 					transparent,
+					// 					var(--blades-white-bright) 25%,
+					// 					var(--blades-white-bright) 75%,
+					// 					transparent);
+					// 			transform: scale(1.2);
+					// 		}
 
-							&:hover:not(.active) {
-								color: var(--blades-black-dark);
-								transform: scale(1.2);
-								background: linear-gradient(to right,
-										transparent,
-										var(--blades-white) 10%,
-										var(--blades-white-bright) 50%,
-										var(--blades-white) 90%,
-										transparent);
-							}
-						}
-					}
+					// 		&:hover:not(.active) {
+					// 			color: var(--blades-black-dark);
+					// 			transform: scale(1.2);
+					// 			background: linear-gradient(to right,
+					// 					transparent,
+					// 					var(--blades-white) 10%,
+					// 					var(--blades-white-bright) 50%,
+					// 					var(--blades-white) 90%,
+					// 					transparent);
+					// 		}
+					// 	}
+					// }
 					.tab[data-tab] {
-						display: none;
-						width: 100%;
-						overflow-y: auto;
-						overflow-x: hidden;
-						padding: 0 var(--content-padding);
-						flex-grow: 1;
+						// display: none;
+						// width: 100%;
+						// overflow-y: auto;
+						// overflow-x: hidden;
+						// padding: 0 var(--content-padding);
+						// flex-grow: 1;
 
 						&.active {
 							display: block;
