--- a/templates/items/ability-sheet.hbs
+++ b/templates/items/ability-sheet.hbs
@@ -1,4 +1,5 @@
 <form class="{{cssClass}}" autocomplete="off">
+	<div class="sheet-root">
 	<section class="sheet-top">
 		<img class="sheet-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
 		<input class="comp-title sheet-title shadowed" type="text" name="name" value="{{item.name}}" placeholder="{{localize 'BITD.Name'}}" />
@@ -22,6 +23,8 @@
 		</label>
 		{{editor content=data.rules_notes target="data.rules_notes" button=true owner=owner editable=editable}}
 		{{/if}}
+
+		<input type="text" class="tag-entry" />
 
 		{{#if (test isGM "||" (test data.load "||" (test data.uses.max "||" data.num_available)))}}
 		<div class="flex-horizontal">
@@ -56,4 +59,5 @@
 			{{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}
 		{{/if}}
 	</section>
+	</div>
 </form>
