--- a/templates/items/faction-sheet.hbs
+++ b/templates/items/faction-sheet.hbs
@@ -6,6 +6,8 @@
 	</section>
 
 
+
+		<input type="text" class="tag-entry" />
   <section class="item-main flex-vertical">
 		<label class="label-stripe">{{localize "BITD.Description"}}</label>
 			<textarea rows="2" name="data.description">{{data.description}}</textarea>
