--- a/scss/sheets/_sheets.scss
+++ b/scss/sheets/_sheets.scss
@@ -165,7 +165,7 @@
 		background: var(--blades-grey);
 		position: relative;
 		height: toRem(24px);
-		// width: 100%;
+		width: 100%;
 		// left: calc(-1 * var(--content-padding));
 		margin-bottom: toRem(5px);
 
