--- a/templates/items/playbook-sheet.hbs
+++ b/templates/items/playbook-sheet.hbs
@@ -1,13 +1,16 @@
 
 <form class="{{cssClass}}" autocomplete="off">
+  <div class="sheet-root">
+
+    {{#if isGM}}
+    <input type="text" class="tag-entry" />
+    {{/if}}
 
 	<section class="sheet-top">
 		<img class="sheet-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
 		<input class="comp-title sheet-title shadowed" type="text" name="name" value="{{item.name}}" placeholder="{{localize 'BITD.Name'}}" />
 	</section>
 
-
-		<input type="text" class="tag-entry" />
 	<section class="item-main flex-vertical">
 		<label class="tab-label">
 			<span class="tab-title">Rules</span>
@@ -28,4 +31,5 @@
 			{{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}
 		{{/if}}
   </section>
+	</div>
 </form>
