--- a/scss/core/_functions.scss
+++ b/scss/core/_functions.scss
@@ -1,4 +1,5 @@
 @use "sass:math";
+@use "sass:color";
 $remPerPixel: 0.0625rem;
 
 @function toRem($pixelSize) {
@@ -11,4 +12,67 @@ $remPerPixel: 0.0625rem;
 @function zLevel($delta: 0) {
 	$z-index-base: 2;
 	@return $z-index-base + $delta;
+}
+
+@function getYIQScaledColorOld($main-color, $target-yiq: 150) {
+
+  // Extract RGB values from $main-color
+  $r: red($main-color);
+  $g: green($main-color);
+  $b: blue($main-color);
+
+  // Convert RGB to YIQ
+  $y: (0.299 * $r + 0.587 * $g + 0.114 * $b) / 255;
+  $i: (0.596 * $r - 0.274 * $g - 0.322 * $b) / 255;
+  $q: (0.211 * $r - 0.523 * $g + 0.312 * $b) / 255;
+
+  // Scale the Y value to the target
+  $y: $target-yiq;
+
+  // Convert back to RGB
+  $r: $y + 0.956 * $i + 0.621 * $q;
+  $g: $y - 0.272 * $i - 0.647 * $q;
+  $b: $y - 1.105 * $i + 1.702 * $q;
+
+  // Clamp RGB values to [0, 255]
+  $r: if($r < 0, 0, if($r > 255, 255, $r));
+  $g: if($g < 0, 0, if($g > 255, 255, $g));
+  $b: if($b < 0, 0, if($b > 255, 255, $b));
+
+  // Return the resulting color
+	@debug "Main: #{$main-color} -- Scaled: #{rgb($r, $g, $b)}";
+
+  @return rgb($r, $g, $b);
+}
+
+@function getYIQScaledColor($main-color, $target-yiq: 150) {
+  // Extract RGB values from $main-color
+  $r: max(30, red($main-color));
+  $g: max(30, green($main-color));
+  $b: max(30, blue($main-color));
+
+	@debug "Initial Components:  #{$r}, #{$g}, #{$b}";
+
+  // Calculate the current Y component in the YIQ color space
+  $current-y: (0.299 * $r + 0.587 * $g + 0.114 * $b);
+	@debug "Current Y-Component: #{$current-y}";
+
+  // Calculate the scaling factor to reach the target Y
+  $scale: $target-yiq / $current-y;
+	@debug "Scaling Factor: #{$scale}";
+
+  // Scale the RGB values of the original color by this factor
+  $r: $r * $scale;
+  $g: $g * $scale;
+  $b: $b * $scale;
+	@debug "Scaled Components: #{$r}, #{$g}, #{$b}";
+
+  // Clamp RGB values to [0, 255]
+  $r: if($r < 0, 0, if($r > 255, 255, $r));
+  $g: if($g < 0, 0, if($g > 255, 255, $g));
+  $b: if($b < 0, 0, if($b > 255, 255, $b));
+
+  // Return the resulting color
+	@debug "Clamped Components: #{$r}, #{$g}, #{$b}";
+  @return rgb($r, $g, $b);
 }
