--- a/templates/faction-sheet.hbs
+++ b/templates/faction-sheet.hbs
@@ -1,4 +1,9 @@
 <form class="{{cssClass}} actor-sheet" autocomplete="off">
+  <div class="sheet-root">
+
+    {{#if isGM}}
+    <input type="text" class="tag-entry" />
+    {{/if}}
   <section id="factions" class="flex-horizontal">
 	<div id="factions-section" class="flex-vertical grow-two">
 	  <div class="tab flex-vertical">
@@ -72,5 +77,5 @@
 	  </div>
 	</div>
   </section>
-
+</div>
 </form>
