--- a/templates/items/crew_ability-sheet.hbs
+++ b/templates/items/crew_ability-sheet.hbs
@@ -1,38 +1,45 @@
 <form class="{{cssClass}}" autocomplete="off">
-	<section class="sheet-top">
-		<img class="sheet-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
-		<input class="comp-title sheet-title shadowed" type="text" name="name" value="{{item.name}}" placeholder="{{localize 'BITD.Name'}}" />
-	</section>
-
-
-		<input type="text" class="tag-entry" />
-	<section class="item-main flex-vertical">
-		{{#if isEmbeddedItem}}
-		<label class="tab-label">
-			<span class="tab-title">Description</span>
-		</label>
-		{{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
-		{{/if}}
-
-		<label class="tab-label">
-			<span class="tab-title">Rules</span>
-		</label>
-		{{editor content=data.rules target="data.rules" button=true owner=owner editable=editable}}
-
-		{{#if (test isGM "||" data.rules_notes)}}
-		{{editor content=data.rules_notes target="data.rules_notes" button=true owner=owner editable=editable}}
-		{{/if}}
-
-    <div class="flex-vertical">
-      <label class="label-stripe">{{localize "BITD.AbilityPrice"}}</label>
-      <input data-dtype="Number" id="ability-price" type="text" name="data.price" value="{{data.price}}" placeholder="{{localize 'BITD.AbilityPrice'}}">
-    </div>
+	<div class="sheet-root">
 
 		{{#if isGM}}
+		<input type="text" class="tag-entry" />
+		{{/if}}
+
+		<section class="sheet-top">
+			<img class="sheet-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
+			<input class="comp-title sheet-title shadowed" type="text" name="name" value="{{item.name}}"
+				placeholder="{{localize 'BITD.Name'}}" />
+		</section>
+
+		<section class="item-main flex-vertical">
+			{{#if isEmbeddedItem}}
+			<label class="tab-label">
+				<span class="tab-title">Description</span>
+			</label>
+			{{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+			{{/if}}
+
+			<label class="tab-label">
+				<span class="tab-title">Rules</span>
+			</label>
+			{{editor content=data.rules target="data.rules" button=true owner=owner editable=editable}}
+
+			{{#if (test isGM "||" data.rules_notes)}}
+			{{editor content=data.rules_notes target="data.rules_notes" button=true owner=owner editable=editable}}
+			{{/if}}
+
+			<div class="flex-vertical">
+				<label class="label-stripe">{{localize "BITD.AbilityPrice"}}</label>
+				<input data-dtype="Number" id="ability-price" type="text" name="data.price" value="{{data.price}}"
+					placeholder="{{localize 'BITD.AbilityPrice'}}">
+			</div>
+
+			{{#if isGM}}
 			<label class="tab-label">
 				<span class="tab-title">Active Effects</span>
 			</label>
 			{{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}
-		{{/if}}
-	</section>
+			{{/if}}
+		</section>
+	</div>
 </form>
